# inflection

./: .gitattributes  .gitignore  ClassCastException_8hpp_source.html  CommonConceptFactoryProvider_8hpp_source.html  CommonConceptFactory_8h_source.html  CommonConceptFactory_8hpp_source.html  DataRegistrationService_8h_source.html  DataRegistrationService_8hpp_source.html  DictionaryKeyIterator_8hpp_source.html  DictionaryMetaData_8h_source.html  DictionaryMetaData_8hpp_source.html  DisplayValue_8h_source.html  DisplayValue_8hpp_source.html  Exception_8hpp_source.html  ExcessComplexityException_8hpp_source.html  FileNotFoundException_8hpp_source.html  ICUException_8hpp_source.html  IOException_8hpp_source.html  IllegalArgumentException_8hpp_source.html  IllegalStateException_8hpp_source.html  IncompatibleVersionException_8hpp_source.html  IndexOutOfBoundsException_8hpp_source.html  InflectableStringConcept_8h_source.html  InflectableStringConcept_8hpp_source.html  InvalidConfigurationException_8hpp_source.html  LICENSE  LanguageGrammarFeatures_8hpp_source.html  LanguageGrammarFeatures__Feature_8hpp_source.html  LanguageGrammarFeatures__GrammarCategory_8hpp_source.html  LanguageGrammarFeatures__GrammarFeatures_8hpp_source.html  LocaleUtils_8h_source.html  LocaleUtils_8hpp_source.html  LocalizedCommonConceptFactoryProvider_8h_source.html  LocalizedCommonConceptFactoryProvider_8hpp_source.html  LoggerConfig_8h_source.html  LoggerConfig_8hpp_source.html  MF2Factory_8hpp_source.html  MissingResourceException_8hpp_source.html  NullPointerException_8hpp_source.html  NumberConcept_8h_source.html  (+215 more)
inflection/: .gitignore  CMakeLists.txt  README.md  build.gradle  gradlew  settings.gradle
inflection/cmake/: GenerateDataResource.cmake  GenerateVersionHeader.cmake  checkCompileHeaders.cmake  dependICU.cmake  inflectionMacros.cmake  installPublicHeaders.cmake  runTests.cmake  versions.mk
inflection/docs/: CMakeLists.txt  Doxyfile
inflection/docs/images/: README.md
inflection/ext/: README.md
inflection/ext/lib/: CMakeLists.txt
inflection/ext/lib/Catch2/: CMakeLists.txt
inflection/ext/lib/CoreFoundation/: CMakeLists.txt
inflection/ext/lib/Marisa/: CMakeLists.txt  Exception.patch  patch.sh
inflection/gradle/: versions.gradle
inflection/resources/: CMakeLists.txt  README.md
inflection/resources/share/inflection/: config.properties
inflection/src/: CMakeLists.txt
inflection/src/icu4cxx/: BreakIterator.hpp  Normalizer2.hpp  NumberFormat.hpp  RegularExpression.hpp  UnicodeSet.hpp  fwd.hpp
inflection/src/inflection/: Object.cpp  Object.hpp  api.h  fwd.hpp  npc.hpp
inflection/src/inflection/analysis/: DictionaryExposableMorphology.cpp  DictionaryExposableMorphology.hpp  MorphologicalAnalyzer.cpp  MorphologicalAnalyzer.hpp  RussianExposableMorphology.cpp  RussianExposableMorphology.hpp  fwd.hpp
inflection/src/inflection/dialog/: ArticleDetectionFunction.cpp  ArticleDetectionFunction.hpp  CommonConceptFactory-c.cpp  (+76 more)
inflection/test/: CMakeLists.txt
inflection/test/src/: main.cpp
inflection/tools/: CMakeLists.txt
inflection/tools/buildDictionary/: BuildDictionary.cpp  CMakeLists.txt  Dictionary.cpp  Dictionary.hpp  DictionaryLogger.cpp  InflectionDictionary.cpp  InflectionDictionary.hpp  Inflector_Inflection.hpp  Inflector_InflectionDictionary.cpp  Inflector_InflectionDictionary.hpp  Inflector_InflectionPattern.cpp  Inflector_InflectionPattern.hpp  Inflector_Suffix.hpp  LexicalDictionaryBuilder.cpp  LexicalDictionaryBuilder.hpp  StringPool.hpp
inflection/tools/buildStringMap/: CMakeLists.txt  buildStringMap.cpp
inflection/tools/buildTokDictionary/: CMakeLists.txt  buildTokDictionary.cpp
inflection/tools/dictionary-parser/: ParseLexicon  ParseWikidata  README.md  build.gradle
inflection/tools/genExemplars/: CMakeLists.txt  genExemplars.cpp
inflection/tools/generateICUWrapper/: CMakeLists.txt  Makefile  generateICUWrapper.cpp
inflection/tools/generateInflectionWrapper/: Makefile  generateInflectionC.py  generateInflectionWrapper.cpp
inflection/tools/generateMorphuntionWrapper/: generateMorphuntionC.py  generateMorphuntionWrapper.cpp
inflection/tools/scripts/: check.sh  coverage.sh  strip_prefix_from_tag.sh  version.sh
inflection/tools/text2cpp/: Generate_DataResource.cpp.sh  text2cpp.cpp
inflection/tools/xml2cpp/: xml2cpp.cpp
morphuntion/: CMakeLists.txt  README.md  build.gradle  gradle.properties
morphuntion/cmake/: build_options.mk  checkCompileHeaders.cmake  dependICU.cmake  installPublicHeaders.cmake  morphuntionMacros.cmake  query_versions.mk
morphuntion/docs/: Doxyfile
morphuntion/ext/: CMakeLists.txt  README.md
morphuntion/gradle/: maven-local.init.gradle  versions.gradle
morphuntion/gradle/wrapper/: gradle-wrapper.properties
morphuntion/resources/: CMakeLists.txt  README.md
morphuntion/src/: CMakeLists.txt
morphuntion/src/icu4cxx/: BreakIterator.hpp  Normalizer2.hpp  NumberFormat.hpp  RegularExpression.hpp  UnicodeSet.hpp  fwd.hpp
morphuntion/src/morphuntion/: Object.cpp  Object.hpp  api.h  featureToggle.h  fwd.hpp  npc.hpp
morphuntion/test/: CMakeLists.txt
morphuntion/test/src/: main.cpp
morphuntion/tools/: CMakeLists.txt
morphuntion/tools/buildDictionary/: BuildDictionary.cpp  CMakeLists.txt  Dictionary.cpp  Dictionary.hpp  DictionaryLogger.hpp  InflectionDictionary.cpp  InflectionDictionary.hpp  Inflector_Inflection.cpp  Inflector_InflectionDictionary.cpp  Inflector_InflectionDictionary.hpp  Inflector_InflectionPattern.hpp  Inflector_Suffix.cpp  Inflector_Suffix.hpp  LexicalDictionaryBuilder.cpp  LexicalDictionaryBuilder.hpp  OverlappingSpanArray.hpp
morphuntion/tools/dictionary-parser/: ParseWiktionary  README.md  build.gradle
morphuntion/tools/generateICUWrapper/: generateICUWrapper.cpp
morphuntion/tools/generateMorphuntionWrapper/: Makefile  generateMorphuntionC.py  generateMorphuntionWrapper.cpp
morphuntion/tools/scripts/: strip_prefix_from_tag.sh  version.sh
morphuntion/tools/text2cpp/: CMakeLists.txt  Generate_DataResource.cpp.sh
morphuntion/tools/xml2cpp/: CMakeLists.txt  xml2cpp.cpp
(+1682 files in other folders)
